--- a/src/user-form/html.html
+++ b/src/user-form/html.html
@@ -15,7 +15,7 @@
     <!--<title>Responsive Regisration Form </title>--> 
 </head>
 <body>
-    <div class="container">
+    <div class="user-container">
         <header>Registration</header>
 
         <form action="#">
